--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -97,7 +97,7 @@ jobs:
         dotnet nuget remove source "trdhuy-nuget-package-source"
         dotnet nuget add source "https://nuget.pkg.github.com/TrdHuy/index.json" --name "trdhuy-nuget-package-source" --username "trdtranduchuy@gmail.com" --password "${{ secrets.WORK_FLOW_ACCESS_TOKEN }}"
         dotnet restore
-        dotnet test --configuration Release --collect:"XPlat Code Coverage"
+        dotnet test --configuration Release --collect:"XPlat Code Coverage" /p:GitToken=${{ secrets.WORK_FLOW_ACCESS_TOKEN }}
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@4.8.7
       if: env.ISSUE_NUMBER == env.VERSION_UP_ISSUE_ID || startsWith(github.ref, 'refs/heads/unittest_') || startsWith(github.ref, 'refs/heads/dev')
@@ -130,7 +130,7 @@ jobs:
         	echo @echo off
         	echo %samPath% init --sam-dir %samDir%
         	echo dotnet clean ${{ env.PROJEFCT_PATH }} -c Release
-        	echo %samPath% scan --sam-dir %samDir% --source-path %projectPath% --language cs dotnet build ${{ env.PROJEFCT_PATH }} -c Release
+        	echo %samPath% scan --sam-dir %samDir% --source-path %projectPath% --language cs dotnet build ${{ env.PROJEFCT_PATH }} -c Release /p:GitToken=${{ secrets.WORK_FLOW_ACCESS_TOKEN }}
         	echo %samPath% analyze --sam-dir %samDir% --source-path %projectPath% --language cs 
         	echo %samPath% calculate --sam-dir %samDir% --source-path %projectPath% --language cs --scoring-metrics cc,dc,mcd,cbo,loc,ncs
         ) > arcrunner.bat
@@ -179,7 +179,7 @@ jobs:
       
     - name: Light publish
       if: env.ISSUE_NUMBER == env.VERSION_UP_ISSUE_ID
-      run: msbuild ${{ env.PROJEFCT_PATH }} /t:Publish /p:Configuration=Release /p:PublishDir=..\light_publish /p:DebugType=embedded /p:DebugSymbols=false /p:GenerateDependencyFile=false
+      run: msbuild ${{ env.PROJEFCT_PATH }} /t:Publish /p:Configuration=Release /p:PublishDir=..\light_publish /p:DebugType=embedded /p:DebugSymbols=false /p:GenerateDependencyFile=false /p:SolutionDir=${{github.workspace}}\
     - name: Zip light release
       if: env.ISSUE_NUMBER == env.VERSION_UP_ISSUE_ID
       run: Compress-Archive -Path 'light_publish' -DestinationPath 'light_publish.zip'
@@ -192,7 +192,7 @@ jobs:
         
     - name: Heavy publish
       if: env.ISSUE_NUMBER == env.VERSION_UP_ISSUE_ID && env.BUILD_HEAVY_PUBLISH == 'true'
-      run: msbuild ${{ env.PROJEFCT_PATH }} /t:Publish /p:Configuration=Release /p:PublishSingleFile=true /p:RuntimeIdentifier=win-x64 /p:SelfContained=true /p:PublishDir=..\heavy_publish /p:DebugType=embedded /p:DebugSymbols=false /p:GenerateDependencyFile=false
+      run: msbuild ${{ env.PROJEFCT_PATH }} /t:Publish /p:Configuration=Release /p:PublishSingleFile=true /p:RuntimeIdentifier=win-x64 /p:SelfContained=true /p:PublishDir=..\heavy_publish /p:DebugType=embedded /p:DebugSymbols=false /p:GenerateDependencyFile=false /p:SolutionDir=${{github.workspace}}\
     - name: Zip heavy release
       if: env.ISSUE_NUMBER == env.VERSION_UP_ISSUE_ID && env.BUILD_HEAVY_PUBLISH == 'true'
       run: Compress-Archive -Path 'heavy_publish' -DestinationPath 'heavy_publish.zip'
