--- a/.github/workflows/pull-req-check.yml
+++ b/.github/workflows/pull-req-check.yml
@@ -102,7 +102,7 @@ jobs:
 
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
-      run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle  /p:GitToken=${{ secrets.WORK_FLOW_ACCESS_TOKEN }}
+      run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:SolutionDir=${{github.workspace}}\ /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle  /p:GitToken=${{ secrets.WORK_FLOW_ACCESS_TOKEN }}
       env:
         Appx_Bundle: Always
         Appx_Bundle_Platforms: x86|x64
