--- a/.github/workflows/sam-arc.yml
+++ b/.github/workflows/sam-arc.yml
@@ -45,6 +45,12 @@ jobs:
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.1
 
+      - name: Restore nuget
+        run: |
+            dotnet nuget remove source "trdhuy-nuget-package-source"
+            dotnet nuget add source "https://nuget.pkg.github.com/TrdHuy/index.json" --name "trdhuy-nuget-package-source" --username "trdtranduchuy@gmail.com" --password "${{ env.GITHUB_TOKEN }}"
+            dotnet restore
+
       - name: create arcrunner.bat
         shell: cmd
         run: |
