--- a/SPRNetToolTest/ArtWizTest.csproj
+++ b/SPRNetToolTest/ArtWizTest.csproj
@@ -1,101 +1,119 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+	<PropertyGroup>
+		<TargetFramework>net6.0-windows</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<ProjectFullPath>$([System.IO.Path]::GetFullPath('$(MSBuildProjectDirectory)'))</ProjectFullPath>
+		<SolutionDirectory>$([System.IO.Path]::GetFullPath('$(ProjectFullPath)\..'))</SolutionDirectory>
+		<PlatformTarget>$(Platform)</PlatformTarget>
 
-    <IsPackable>false</IsPackable>
-    <IsTestProject>true</IsTestProject>
-	<PlatformTarget>x64</PlatformTarget>
+		<IsPackable>false</IsPackable>
+		<IsTestProject>true</IsTestProject>
+		<PlatformTarget>x64</PlatformTarget>
+		<Platforms>x64;x86</Platforms>
+		<BuildTag>ARTWIZ_TEST_BUILD_TAG</BuildTag>
+	</PropertyGroup>
 
-  </PropertyGroup>
+	<ItemGroup>
+		<None Remove="Resources\1.bin" />
+		<None Remove="Resources\1.png" />
+		<None Remove="Resources\1.spr" />
+		<None Remove="Resources\12345.spr" />
+		<None Remove="Resources\1_319x319.bin" />
+		<None Remove="Resources\2.bin" />
+		<None Remove="Resources\3.bin" />
+		<None Remove="Resources\4.bin" />
+		<None Remove="Resources\5.bin" />
+		<None Remove="Resources\alpha.spr" />
+		<None Remove="Resources\test.bin" />
+		<None Remove="Resources\test.png" />
+		<None Remove="Resources\test.spr" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Remove="Resources\1.bin" />
-    <None Remove="Resources\1.png" />
-    <None Remove="Resources\1.spr" />
-    <None Remove="Resources\12345.spr" />
-    <None Remove="Resources\1_319x319.bin" />
-    <None Remove="Resources\2.bin" />
-    <None Remove="Resources\3.bin" />
-    <None Remove="Resources\4.bin" />
-    <None Remove="Resources\5.bin" />
-    <None Remove="Resources\alpha.spr" />
-    <None Remove="Resources\test.bin" />
-    <None Remove="Resources\test.png" />
-    <None Remove="Resources\test.spr" />
-  </ItemGroup>
+	<ItemGroup>
+		<ContentWithTargetPath Include="..\libs\engine.dll">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<TargetPath>engine.dll</TargetPath>
+		</ContentWithTargetPath>
+		<Content Include="Resources\1.bin">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\1.png">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\1.spr">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\12345.spr">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\1_319x319.bin">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\2.bin">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\3.bin">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\4.bin">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\5.bin">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\alpha.spr">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\test.bin">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\test.png">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
-  <ItemGroup>
-	<ContentWithTargetPath Include="..\libs\engine.dll">
-		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		<TargetPath>engine.dll</TargetPath>
-	</ContentWithTargetPath>
-    <Content Include="Resources\1.bin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\1.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\1.spr">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\12345.spr">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\1_319x319.bin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\2.bin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\3.bin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\4.bin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\5.bin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\alpha.spr">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\test.bin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\test.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+		<PackageReference Include="Moq" Version="4.20.69" />
+		<PackageReference Include="NUnit" Version="3.13.3" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
+		<PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
+		<PackageReference Include="coverlet.collector" Version="3.2.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-    <PackageReference Include="Moq" Version="4.20.69" />
-    <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
-    <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
-    <PackageReference Include="coverlet.collector" Version="3.2.0" />
-  </ItemGroup>
+	<ItemGroup Condition="'$(Platform)' == 'x64'">
+		<PackageReference Include="WizMachinex64" Version="1.0.0.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\SPRNetTool\ArtWiz.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\SPRNetTool\ArtWiz.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<Content Include="Resources\test.spr">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Include="Resources\test.spr">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="wengine">
-      <HintPath>..\libs\wengine.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-	    <Exec Command="echo Execute signing task"/>
-	    <Exec Command="powershell -ExecutionPolicy Bypass -Command &quot;&amp;$(SolutionDir)SignToolUtilForClient.ps1&quot; -filesToSign '$(TargetDir)testhost.dll,$(TargetDir)testhost.exe' -localConfigPath '$(SolutionDir)local.xml' -prvtoken '$(GitToken)'"/>
-    </Target>
+	<!--START: Application Signing Stuff-->
+	<PropertyGroup>
+		<GetSignToolPath>$(SolutionDirectory)\GetSignToolPath.ps1</GetSignToolPath>
+		<SignToolPathResuleCachePath>$(SolutionDirectory)\bin\signtoolpath.txt</SignToolPathResuleCachePath>
+	</PropertyGroup>
+	<Target Name= "GetSignToolPath" BeforeTargets="BeforeBuild">
+		<Exec Command="echo $(BuildTag): GetSignToolPath: Platform=$(Platform)" />
+		<Exec Command="powershell -ExecutionPolicy Bypass -File &quot;$(GetSignToolPath)&quot; -platform $(Platform) -resCacheFilePath $(SignToolPathResuleCachePath)" />
+		<ReadLinesFromFile File="$(SignToolPathResuleCachePath)">
+			<Output TaskParameter="Lines" PropertyName="SignToolPath" />
+		</ReadLinesFromFile>
+		<Exec Command="echo $(BuildTag): GetSignToolPath: SignToolPath=$(SignToolPath)" />
+	</Target>
+	<Target Name="SignTheApplication" AfterTargets="AfterBuild">
+		<Exec Command="echo $(BuildTag): SignTheApplication: Executing signing task" />
+		<Exec Command="echo $(BuildTag): SignTheApplication: SolutionDirectory: $(SolutionDirectory)" />
+		<Exec Command="echo $(BuildTag): SignTheApplication: TargetDir: $(TargetDir)" />
+		<Exec Command="powershell -ExecutionPolicy Bypass -Command &quot;&amp; '$(SolutionDirectory)\SignToolUtilForClient.ps1' -filesToSign '$(TargetDir)ArtWiz.exe,$(TargetDir)ArtWiz.dll' -localConfigPath '$(SolutionDirectory)\local.xml' -signToolCachePath '$(SignToolPathResuleCachePath)' -prvtoken '$(GitToken)'&quot;" />
+	</Target>
+	<!--END: Application Signing Stuff-->
 </Project>
